# ToDoList_Qt

./: CMakeLists.txt  README.md
include/: InputArea.h  MainWindow.h  Task.h  TasksList.h
source/: InputArea.cpp  MainWindow.cpp  Task.cpp  TasksList.cpp  main.cpp
